.tanzu/config/httproute-spring-api-csv.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/spring-api-csv
  name: spring-api-csv-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: spring-api-csv
  rules:
  - backendRefs:
    - kind: Service
      name: spring-api-csv
      port: 8080
